--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "generate-icons": "node scripts/generate-icons.js",
     "generate-splash": "node scripts/generate-splash-screens.js",
-    "generate-assets": "pnpm run generate-icons && pnpm run generate-splash",
+    "generate-screenshots": "node scripts/copy-placeholder-screenshots.mjs",
+    "generate-assets": "pnpm run generate-icons && pnpm run generate-splash && pnpm run generate-screenshots",
     "build:android": "./scripts/build-android.sh",
     "test:android": "./scripts/test-android.sh",
     "build:ios": "./scripts/build-ios.sh",
@@ -39,6 +40,7 @@
     "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^7.2.0",
     "@eslint/eslintrc": "^3",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
